--- a/index.html
+++ b/index.html
@@ -26,16 +26,65 @@
                 </div>
             </div>
             <div class="hero-container">
-                <div class="hero-text">
-                    <h1>This Website is awesome</h1>
-                    <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast
+                <div class="hero-text-container">
+                    <h1 class="hero-text">This Website is awesome</h1>
+                    <p class="hero-sec-text">This website has some subtext that goes here under the main title. It's
+                        smaller font and the color is lower contrast
                     </p>
-                    <button>Sign Up</button>
+                    <button class="hero-button">Sign Up</button>
                 </div>
                 <div class="hero-image">
                     <img src="./assets/sea.jpeg" alt="">
                 </div>
             </div>
+        </div>
+
+        <div class="info-container">
+            <div class="info-title">
+                <h1>Some Random Information</h1>
+            </div>
+            <div class="info-cards">
+                <div class="info-card">
+                    <img src="./assets/dolphin.png" alt="">
+                    <p class="info-text">This is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="info-card">
+                    <img src="./assets/ocean.jpeg" alt="">
+                    <p class="info-text">This is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="info-card">
+                    <img src="./assets/stone.png" alt="">
+                    <p class="info-text">This is some subtext under an illustration or image
+                    </p>
+                </div>
+                <div class="info-card">
+                    <img src="./assets/sunset.png" alt="">
+                    <p class="info-text">This is some subtext under an illustration or image
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote-container">
+            <p class="quote"><em>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus soluta sapiente ea quis. Ut libero nulla neque esse voluptas quae ipsa repudiandae ipsum! Quisquam, qui."</em>
+            </p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
+
+        <div class="sign-up-container">
+            <div class="sign-up-text">
+                <h2>Call the action, it's the time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="sign-up-button">
+                <button>Sign Up</button>
+            </div>
+        </div>
+
+        <div class="footer">
+            <p>Copyright @ The Odin Project 2025</p>
         </div>
 
     </div>
